# csa-lab-3

./: .coverage  main.py  pyproject.toml
.github/workflows/: markdown.yml  python.yml
src/: Makefile  alu.py  isa.py  machine.py  main.py  translator.py
tests/: alu_test.py  control_unit_test.py  datapath_test.py  golden_test.py  integration_test.py  translator_test.py
tests/in/: cat.asm  hello.asm  hello_username.asm  prob1.asm  sum.asm
